Fix principle number circles missing background image path

--- a/apps/habitualos-web/src/styles/_landing.scss
+++ b/apps/habitualos-web/src/styles/_landing.scss
@@ -435,7 +435,7 @@ section.section:nth-of-type(even) {
   justify-content: center;
   width: 64px;
   height: 64px;
-  background-image: url('/images/habitualos_vortex2.png');
+  background-image: url('/assets/images/habitualos_vortex2.png');
   background-size: cover;
   background-position: center;
   border-radius: 50%;
